# reddit-module-partition-example

./: CMakeLists.txt
.github/workflows/: test.yaml
src/: mod.cppm  partition.cpp  partition.cppm
test/: main.cpp
